--- a/sign/1684290/org/ersd/index.html
+++ b/sign/1684290/org/ersd/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DocuSign | ERSD #1684290</title>
+    <link rel="shortcut icon" href="./favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
