--- a/sign/1684290/org/ersd/index.html
+++ b/sign/1684290/org/ersd/index.html
@@ -37,7 +37,7 @@
         </svg>
       </div>
       <div>
-        <p class="ds-id mt-1">Org #1684290</p>
+        <p class="ds-id mt-1" style="margin-right: -20px">Org #1684290</p>
       </div>
     </div>
     <div class="px-5">
@@ -121,8 +121,8 @@
 
     .ds-id {
       font-weight: 700;
-      font-size: 18px;
-      opacity: 0.25;
+      font-size: 14px;
+      opacity: 0.4;
       text-transform: uppercase;
     }
 
