--- a/sign/1684290/org/index.html
+++ b/sign/1684290/org/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web3DocuSign - Document #072914372</title>
+    <title>Web3DocuSign - Document #072914372</title>
+    <meta
+      name="twitter:title"
+      content="Web3DocuSign | Electronic Signature Powered by Web3"
+    />
+    <meta
+      name="twitter:description"
+      content="DocuSign ensures the security &amp; mobility to digitally transform businesses. Sign docs for free."
+    />
+
     <link rel="shortcut icon" href="./favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
