--- a/sign/1684290/org/ersd/index.html
+++ b/sign/1684290/org/ersd/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="d-flex justify-content-between pt-4 pb-2 px-5 ds-nav">
-      <div>
+      <a href="https://docusign.com">
         <svg
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@
             d="M128.348 10.35h.403c.166 0 .28 0 .391.09a.383.383 0 0 1 .139.31c0 .242-.178.325-.247.347l.28.51h-.269l-.25-.466h-.211v.465h-.233v-1.254l-.003-.002Zm.233.202v.393h.083c.081 0 .112 0 .156-.003.053 0 .222-.011.222-.194 0-.028 0-.119-.1-.169-.05-.025-.111-.027-.25-.027h-.111Z"
           ></path>
         </svg>
-      </div>
+      </a>
       <div>
         <p class="ds-id mt-1" style="margin-right: -20px">Org #1684290</p>
       </div>
